# KGGEN

./: .env.example  .gitignore  .ralph_state.json  CLAUDE.md  Dockerfile  README.md  WHY_I_BUILT_THIS.md  docker-compose.yml  manifest.json  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
converted_md/: CUAD OPEN SOURCE CONTRACT LABELED .pdf.md
data/: 01_extract_kggen_methodology.py  04_generate_prd_structure.py  KGGEN PAPER.pdf.md  MANIFEST.md  cuad_dataset_analysis.json  kggen_cuad_mapping.json  kggen_methodology_analysis.json  prd_structure.json  sample_software_license.txt  tech_agreement_ontology.json
docker/postgres/: init.sql
scripts/: benchmark_classifier.py  calibrate_classifier.py  extract_nda_contracts.py  finetune_classifier.py  prepare_cuad_dataset.py  ralph.py  ralph_finetune_manifest.yaml  ralph_manifest.yaml  ralph_tests_manifest.yaml
src/: __init__.py  config.py  main.py  pipeline.py
src/aggregation/: __init__.py  aggregator.py
src/api/: __init__.py  app.py  routes.py
src/classification/: __init__.py  classifier.py  cuad_labels.py
src/extraction/: __init__.py  extractor.py
src/interdependency/: __init__.py  analyzer.py  detector.py  graph.py  matrix.py  types.py
src/kggen_cuad/: __init__.py  cli.py  config.py
src/models/: schema.py
src/portfolio/: __init__.py  analyzer.py
src/query/: __init__.py  service.py
src/resolution/: __init__.py  resolver.py
src/risk/: __init__.py  assessor.py  rules.py
src/search/: __init__.py  backends.py  service.py
src/utils/: embedding.py  llm.py  neo4j_store.py  pdf_reader.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_aggregation.py  test_config.py  test_embedding_utils.py  test_extraction_helpers.py  test_interdependency.py  test_llm_service.py  test_models.py  test_pipeline_helpers.py  test_portfolio_analyzer.py  test_query_service.py  test_resolution.py  test_risk_rules.py  test_search_backends.py  test_search_service.py
workflow/: 02_extract_cuad_structure.py  03_map_kggen_to_cuad.py  05_create_architecture_diagram.py
writing_outputs/: PEER_REVIEW.md  SUMMARY.md  progress.md
writing_outputs/drafts/: v1_draft.tex  v1_prd.tex  v2_draft.aux  v2_draft.bbl  v2_draft.blg  v2_draft.out  v2_draft.tex  v2_draft.toc  v2_draft_part1.tex  v2_draft_part10.tex  v2_draft_part2.tex  v2_draft_part3.tex  v2_draft_part4.tex  v2_draft_part5.tex  v2_draft_part6.tex  v2_draft_part7.tex  (+9 more)
(+39 files in other folders)
