[project]
name = "kggen-cuad"
version = "0.1.0"
description = "Knowledge Graph Generator for CUAD Legal Contracts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KGGEN Team"}
]
dependencies = [
    # LLM Orchestration
    "dspy-ai>=2.5.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # NLP & Embeddings
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0",

    # Graph Processing
    "neo4j>=5.25.0",
    "networkx>=3.4.0",

    # Vector Database
    "qdrant-client>=1.12.0",

    # PDF Processing
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",

    # Background Jobs
    "celery>=5.4.0",
    "redis>=5.2.0",

    # Search
    "elasticsearch>=8.16.0",

    # Data Processing & ML
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "tqdm>=4.67.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # Dashboard
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
kggen = "kggen_cuad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (slower, may use TestClient)",
]
